# OTA_Consulting

Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/: CMakeLists.txt  README.md  main.c  main.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/config/: ImageBuilderConfig.h.in  crypto_config.h  os_port_config.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/inc/: body.h  cli.h  cli_print.h  crc32.h  footer.h  header.h  utils.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/aead/: aead_algorithms.h  ccm.c  ccm.h  chacha20_poly1305.c  chacha20_poly1305.h  gcm.c  gcm.h  siv.c  siv.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/cipher/: aes.c  aes.h  aria.c  aria.h  blowfish.c  blowfish.h  camellia.c  camellia.h  cast128.c  cast128.h  cast256.c  cast256.h  chacha.c  chacha.h  cipher_algorithms.h  des.c  des.h  des3.c  des3.h  idea.c  idea.h  mars.c  mars.h  present.c  present.h  rc2.c  rc2.h  rc4.c  rc4.h  rc6.c  rc6.h  salsa20.c  salsa20.h  seed.c  seed.h  serpent.c  serpent.h  sm4.c  sm4.h  tea.c  (+9 more)
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/cipher_modes/: cbc.c  cbc.h  cfb.c  cfb.h  cipher_modes.h  ctr.c  ctr.h  ecb.c  ecb.h  ofb.c  ofb.h  xts.c  xts.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/core/: crypto.h  crypto_legacy.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/ecc/: curve25519.c  curve25519.h  curve448.c  curve448.h  ec.c  ec.h  ec_curves.c  ec_curves.h  ec_misc.c  ec_misc.h  ecdh.c  ecdh.h  ecdsa.c  ecdsa.h  ed25519.c  ed25519.h  ed448.c  ed448.h  eddsa.c  eddsa.h  sm2.c  sm2.h  x25519.c  x25519.h  x448.c  x448.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/encoding/: asn1.c  asn1.h  base64.c  base64.h  base64url.c  base64url.h  oid.c  oid.h  radix64.c  radix64.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/hardware/apm32f4xx/: apm32f4xx_crypto.c  apm32f4xx_crypto.h  apm32f4xx_crypto_cipher.c  apm32f4xx_crypto_cipher.h  apm32f4xx_crypto_hash.c  apm32f4xx_crypto_hash.h  apm32f4xx_crypto_trng.c  apm32f4xx_crypto_trng.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/hash/: blake2b.c  blake2b.h  blake2b160.c  blake2b160.h  blake2b256.c  blake2b256.h  blake2b384.c  blake2b384.h  blake2b512.c  blake2b512.h  blake2s.c  blake2s.h  blake2s128.c  blake2s128.h  blake2s160.c  blake2s160.h  blake2s224.c  blake2s224.h  blake2s256.c  blake2s256.h  hash_algorithms.h  md2.c  md2.h  md4.c  md4.h  md5.c  md5.h  ripemd128.c  ripemd128.h  ripemd160.c  ripemd160.h  sha1.c  sha1.h  sha224.c  sha224.h  sha256.c  sha256.h  sha384.c  sha384.h  sha3_224.c  (+19 more)
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/kdf/: bcrypt.c  bcrypt.h  concat_kdf.c  concat_kdf.h  hkdf.c  hkdf.h  md5_crypt.c  md5_crypt.h  pbkdf.c  pbkdf.h  scrypt.c  scrypt.h  sha_crypt.c  sha_crypt.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/lwc/: ascon.c  ascon.h  ascon_aead128.c  ascon_aead128.h  ascon_cxof128.c  ascon_cxof128.h  ascon_hash256.c  ascon_hash256.h  ascon_xof128.c  ascon_xof128.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/mac/: cmac.c  cmac.h  gmac.c  gmac.h  hmac.c  hmac.h  kmac.c  kmac.h  mac_algorithms.h  poly1305.c  poly1305.h  xcbc_mac.c  xcbc_mac.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/mpi/: mpi.c  mpi.h  mpi_arm_v4_keil.s  mpi_arm_v7a_gcc.S  mpi_arm_v7a_iar.S  mpi_arm_v7m_ccs.asm  mpi_arm_v7m_gcc.S  mpi_arm_v7m_iar.s  mpi_arm_v7m_keil.s  mpi_mips_gcc.S
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/ocsp/: ocsp_client.c  ocsp_client.h  ocsp_client_misc.c  ocsp_client_misc.h  ocsp_common.c  ocsp_common.h  ocsp_req_create.c  ocsp_req_create.h  ocsp_req_format.c  ocsp_req_format.h  ocsp_resp_parse.c  ocsp_resp_parse.h  ocsp_resp_validate.c  ocsp_resp_validate.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/pkc/: dh.c  dh.h  dsa.c  dsa.h  key_exch_algorithms.h  rsa.c  rsa.h  rsa_misc.c  rsa_misc.h  sign_algorithms.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/pkix/: pem_cert_key_import.c  pem_cert_key_import.h  pem_common.c  pem_common.h  pem_decrypt.c  pem_decrypt.h  pem_export.c  pem_export.h  pem_import.c  pem_import.h  pkcs5_common.c  pkcs5_common.h  pkcs5_decrypt.c  pkcs5_decrypt.h  pkcs8_key_format.c  pkcs8_key_format.h  pkcs8_key_parse.c  pkcs8_key_parse.h  x509_cert_create.c  x509_cert_create.h  x509_cert_ext_format.c  x509_cert_ext_format.h  x509_cert_ext_parse.c  x509_cert_ext_parse.h  x509_cert_format.c  x509_cert_format.h  x509_cert_parse.c  x509_cert_parse.h  x509_cert_validate.c  x509_cert_validate.h  x509_common.c  x509_common.h  x509_crl_ext_parse.c  x509_crl_ext_parse.h  x509_crl_parse.c  x509_crl_parse.h  x509_crl_validate.c  x509_crl_validate.h  x509_csr_create.c  x509_csr_create.h  (+18 more)
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/pqc/: kem.c  kem.h  mlkem1024.c  mlkem1024.h  mlkem512.c  mlkem512.h  mlkem768.c  mlkem768.h  sntrup761.c  sntrup761.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/rng/: trng.h  yarrow.c  yarrow.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/lib/CycloneCRYPTO/xof/: cshake.c  cshake.h  keccak.c  keccak.h  shake.c  shake.h  xof_algorithms.h
Firmware/OTA_Package/Middlewares/CycloneBOOT_Open_2_5_0/utils/ImageBuilder/src/: body.c  cli.c  crc32.c  footer.c  header.c  utils.c
doc/: .$Diagrama sin título.drawio.bkp  (+1 more)
(+2858 files in other folders)
